<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    tools:context=".fragments.LibraryFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSelectBook"
        style="@style/ButtonStyle"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:fontFamily="serif"
        android:text="@string/select_book_button"
        android:textColor="@color/default_button_text"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/currentBookText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonSelectBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:scrollbarSize="14dp"
        android:textAppearance="@style/TextStyle"
        android:textSize="14sp"

        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="82dp" />

    <ImageView
        android:id="@+id/selectedImage"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/currentBookText"
        android:layout_width="183dp"
        android:layout_height="232dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/youhavenobooks"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="101dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/libraryDisplay"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@id/selectedImage"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:clickable="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add_file"
        style="@style/ButtonStyle"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/libraryDisplay"
        android:layout_width="138dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@color/default_button"
        android:fontFamily="serif"
        android:text="@string/file_button"
        android:textColor="@color/default_button_text"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="605dp" />

    <Button
        android:id="@+id/clearLibraryButton"
        style="@style/ButtonStyle"
        android:layout_below="@id/button_add_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/clear_library_button"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="635dp" />

    <!-- FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingTutorialButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="15dp"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/replay_tutorial"
        app:backgroundTint="#FFFFFF"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSettings"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:fontFamily="serif"
        android:text="@string/settings_button"
        android:textColor="@color/default_button_text"
        tools:layout_editor_absoluteY="685dp" />

</RelativeLayout>

