<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TutorialFragment1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_background">

        <ImageView
            android:id="@+id/tutorialImage"
            android:layout_width="380dp"
            android:layout_height="380dp"
            android:layout_centerHorizontal="true"
            android:baselineAlignBottom="false"
            app:srcCompat="@drawable/leftrightturntutorial"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/lookOutsideText"
            android:layout_below="@id/tutorialImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:text="@string/look_outside_text"
            android:textAppearance="@style/TextStyle"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/rightGestureText"
            android:layout_width="267dp"
            android:layout_height="27dp"
            android:layout_below="@id/lookOutsideText"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/perform_look_right_text" />

        <TextView
            android:id="@+id/rightCountText"
            android:layout_below="@id/lookOutsideText"
            android:layout_toEndOf="@id/leftGestureText"
            android:layout_width="20dp"
            android:layout_height="27dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:layout_editor_absoluteX="305dp"
            tools:layout_editor_absoluteY="512dp" />

        <TextView
            android:id="@+id/leftGestureText"
            android:layout_width="267dp"
            android:layout_height="27dp"
            android:layout_below="@id/rightGestureText"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/perform_look_left_text"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="497dp" />

        <TextView
            android:id="@+id/leftCountText"
            android:layout_below="@id/rightGestureText"
            android:layout_toEndOf="@id/leftGestureText"
            android:layout_width="20dp"
            android:layout_height="27dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:layout_editor_absoluteX="330dp"
            tools:layout_editor_absoluteY="485dp" />


    </RelativeLayout>
</FrameLayout>