<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TutorialFragment2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_background">

        <ImageView
            android:id="@+id/tutorialImage"
            android:layout_width="380dp"
            android:layout_height="380dp"
            android:layout_centerHorizontal="true"
            android:baselineAlignBottom="false"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/updownturntutorial"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="4dp" />

        <TextView
            android:id="@+id/lookOutsideText"
            android:layout_below="@id/tutorialImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="44dp"
            android:foregroundGravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:text="@string/look_outside_text"
            android:textAppearance="@style/TextStyle"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/upGestureText"
            android:layout_width="267dp"
            android:layout_height="27dp"
            android:layout_below="@id/lookOutsideText"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/performed_quot_look_up_quot_gesture_x_3"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="497dp" />

        <TextView
            android:id="@+id/upCountText"
            android:layout_below="@id/lookOutsideText"
            android:layout_toEndOf="@id/upGestureText"
            android:layout_width="20dp"
            android:layout_height="27dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:layout_editor_absoluteX="330dp"
            tools:layout_editor_absoluteY="485dp" />

        <TextView
            android:id="@+id/downGestureText"
            android:layout_width="267dp"
            android:layout_height="27dp"
            android:layout_below="@id/upGestureText"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/performed_quot_look_down_quot_gesture_x_3" />

        <TextView
            android:id="@+id/downCountText"
            android:layout_below="@id/upGestureText"
            android:layout_toEndOf="@id/downGestureText"
            android:layout_width="20dp"
            android:layout_height="27dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:layout_editor_absoluteX="305dp"
            tools:layout_editor_absoluteY="512dp" />

    </RelativeLayout>

</FrameLayout>